# game-2021

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: formatting.yml  linux.yml  macos.yml  windows.yml
scripts/: build.bat  build.sh  run.sh
src/entity/: entity.cpp  entity.hpp  player.cpp  player.hpp
src/gl/: gl.h  glad.c  glad.h  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  stb_impl.cpp  text.cpp  text.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/gl/shad/: basic_frag.glsl  basic_vert.glsl  text_frag.glsl
src/main/: application.cpp  application.hpp  main.cpp  util.cpp  util.hpp
src/util/: profiler.cpp  profiler.hpp
